# iv2

./: .gitlab-ci.yml  Cargo.toml  README.md  default.nix  default_config.toml  iv.desktop  shell.nix
nix/: rust.nix  sources.json
src/: config.rs  context.rs  events.rs  main.rs  math.rs  percent.rs  ratio.rs  state.rs  widgets.rs
src/config/: deserializers.rs
