[package]
name = "iv2"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shrinkwraprs = "0.2.1"
serde = { version = "1.0.98", features = ["derive"] }
gtk = { version = "0.7.0", features = ["v3_24", "futures"] }
gio = ""
gdk = ""
glib = ""
gdk-pixbuf = { version = "", features = ["futures"] }
cascade = "0.1.3"
snafu = "0.4.4"
hashbrown = { version = "0.6.0", features = ["serde"] }
log = "0.4.8"
env_logger = "0.6.2"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
structopt = "0.2.18"
rand = "0.7.0"
regex = "1.2.1"
euclid = "0.20.1"
num-traits = "0.2.8"

[dependencies.cfgen]
git = "https://github.com/foldu/cfgen"
rev = "e4eca3f8732f3f286c7184a3e4306e21065c8562"
[dependencies.linked-slotlist]
git = "https://github.com/foldu/linked-slotlist"
rev = "c0d47f2f1c343b03e88753cf35a7f84c38552f69"
