[package]
name = "iv"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
gtk = { version = "0.7.0", features = ["v3_22", "futures"] }
gio = ""
gdk = ""
glib = ""
gdk-pixbuf = { version = "", features = ["v2_32", "futures"] }
cascade = "0.1.3"
snafu = { version = "0.5.0", default-features = false, features = ["rust_1_30"] }
hashbrown = { version = "0.8.2", features = ["serde"] }
log = "0.4.8"
env_logger = { version = "0.7.0", default-features = false }
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
structopt = "0.3.2"
rand = "0.7.2"
euclid = "0.20.1"
num-traits = "0.2.8"
slotmap = "0.4.0"

[dependencies.cfgen]
git = "https://github.com/foldu/cfgen"
rev = "e4eca3f8732f3f286c7184a3e4306e21065c8562"
[dependencies.linked-slotlist]
git = "https://github.com/foldu/linked-slotlist"
rev = "fc58d09e264c7b66bfdf2342ef9f3cf677a47fa4"
[dependencies.formatter]
git = "https://github.com/foldu/formatter"
rev = "d1b1b02b55526a89e6eaee767e64c1611ff6f1e7"
